<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Currencies converter</string>
    <string name="rub">Rub</string>
    <string name="usd">Usd</string>
    <string name="from">Currency 1:</string>
    <string name="to">Currency 2:</string>
    <string name="one">1</string>
    <string name="equally">=</string>
    <string name="send">Send</string>
    <string name="zero">0</string>
    <string name="endpoint">endpoint</string>
    <string name="loading" tools:ignore="TypographyEllipsis">loading...</string>
    <string name="back">back</string>
    <string name="default_endpoint">http://localhost:8000</string>
</resources>