<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndpointActivity">

    <EditText
        android:id="@+id/endpoint"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_input"
        android:ems="10"
        android:hint="@string/endpoint"
        android:inputType="textPersonName"
        android:paddingStart="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/default_endpoint"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:background="#00000000"
        android:text="@string/back"
        android:textColor="#0b75f1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>